--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -10,6 +10,8 @@
   padding: 1rem 1.5rem;
   align-items: center;
   gap: 1rem;
+  border-bottom: 1px solid #e5e5e5;;
+
 }
 
 /* IZQUIERDA: logo + marca */
